# pywhentowork

./: README.md  pyproject.toml
pywhentowork/: api.py
pywhentowork/classes/: __init__.py  _w2w_base.py  category.json  category.py  employee.json  employee.py  position.json  position.py  shift.json  shift.py
